creating responseDTO for security and adjusting methods and tests